full web site MedCare+

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <div class="text-white font-bold">MED <span class="font-bold text-blue-500">Care+</span></div>
             </a>
 
-            <a class="text-[#eee] mr-10 hover:text-blue-500 transition-colors" href="/src/medecins.html">Médecins</a>
+            <a class="text-[#eee] mr-10 hover:text-blue-500 transition-colors" href="src/medecins.html">Médecins</a>
             <a class="text-[#eee] mr-10 hover:text-blue-500 transition-colors"
-                href="/src/rendez-vous.html">Rendez-vous</a>
+                href="src/rendez-vous.html">Rendez-vous</a>
             <form id="searchForm" class="form relative" onsubmit="return handleSearch(event)">
                 <button type="button" class="absolute left-2 -translate-y-1/2 top-1/2 p-1">
                     <svg width="17" height="16" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
@@ -44,7 +44,7 @@
     <div class="h-screen -mt-[50px] w-screen overflow-hidden relative">
         <div class="relative w-full h-full">
             <div class="item w-full h-full absolute inset-0">
-                <img src="/public/images/pic4.jpg" alt="Healthy Food" class="w-full h-full object-cover">
+                <img src="public/images/pic4.jpg" alt="Healthy Food" class="w-full h-full object-cover">
 
                 <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center backdrop-blur-xl bg-gradient-to-br from-emerald-500/20 via-teal-500/15 to-cyan-500/20 
                     p-8 rounded-[2.5rem] w-[90%] max-w-3xl text-white shadow-2xl border-2 border-white/20">
@@ -87,7 +87,7 @@
             </div>
 
             <div class="item w-full h-full absolute inset-0">
-                <img src="/public/images/pic1.jpg" alt="Exercise" class="w-full h-full object-cover">
+                <img src="public/images/pic1.jpg" alt="Exercise" class="w-full h-full object-cover">
 
                 <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center backdrop-blur-xl bg-gradient-to-br from-orange-500/20 via-red-500/15 to-pink-500/20 
                     p-8 rounded-[2.5rem] w-[90%] max-w-3xl text-white shadow-2xl border-2 border-white/20">
@@ -133,7 +133,7 @@
             </div>
 
             <div class="item w-full h-full absolute inset-0">
-                <img src="/public/images/pic2.jpg" alt="Sleep" class="w-full h-full object-cover">
+                <img src="public/images/pic2.jpg" alt="Sleep" class="w-full h-full object-cover">
 
                 <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center backdrop-blur-xl bg-gradient-to-br from-indigo-500/20 via-purple-500/15 to-blue-500/20 
                     p-8 rounded-[2.5rem] w-[90%] max-w-3xl text-white shadow-2xl border-2 border-white/20">
@@ -177,7 +177,7 @@
             </div>
 
             <div class="item w-full h-full absolute inset-0">
-                <img src="/public/images/pic3.jpg" alt="Meditation" class="w-full h-full object-cover">
+                <img src="public/images/pic3.jpg" alt="Meditation" class="w-full h-full object-cover">
 
                 <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center backdrop-blur-xl bg-gradient-to-br from-violet-500/20 via-fuchsia-500/15 to-purple-500/20 
                     p-8 rounded-[2.5rem] w-[90%] max-w-3xl text-white shadow-2xl border-2 border-white/20">
@@ -224,7 +224,7 @@
         </div>
     </div>
 
-    <script src="/public/asset/script.js">
+    <script src="public/asset/script.js">
     </script>
 
 </body>
