full web site MedCare+

--- a/src/medecins.html
+++ b/src/medecins.html
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <script src="../public/asset/script.js"></script>
+    <script src="/public/asset/script.js"></script>
 
 </body>
 
