--- a/src/rendez-vous.html
+++ b/src/rendez-vous.html
@@ -13,7 +13,7 @@
 
     <header class="w-[100%] h-[50px] flex items-center relative justify-center z-50">
         <nav class="w-[80%] flex h-25 justify-around items-center ">
-            <a href="/index.html">
+            <a href="index.html">
                 <div class="text-white font-bold">MED <span class="font-bold text-blue-500">Care+</span></div>
             </a>
 
