full web site MedCare+

--- a/src/medecins.html
+++ b/src/medecins.html
@@ -18,7 +18,7 @@
             </a>
 
             <a class="text-blue-500 mr-10 font-semibold transition-colors" href="medecins.html">Médecins</a>
-            <a class="text-[#eee] mr-10 hover:text-blue-500 transition-colors" href="">Rendez-vous</a>
+            <a class="text-[#eee] mr-10 hover:text-blue-500 transition-colors" href="rendez-vous.html">Rendez-vous</a>
             <form class="form relative">
                 <button class="absolute left-2 -translate-y-1/2 top-1/2 p-1" type="button">
                     <svg width="17" height="16" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
